# scraping-img-g00gl3

./: .env_example  LICENSE  README.md  main copy.py  main.py  pyproject.toml
tests/: test_sig.py
